--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  background: #EAE7F0;
-  
+  background: #eae7f0;
 }
 .main {
   margin: auto;
@@ -11,52 +10,81 @@ body {
 h2 {
   margin: auto;
   margin-top: 2rem;
+  margin-bottom: 1.5rem;
   color: #3a3937;
   font-size: 4rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 h3 {
   margin: auto;
   color: #3a3937;
-  margin-bottom: 4rem;
-  font-size: 1.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  margin-bottom: .3rem;
+  font-size: 1.1rem;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #synth {
-  background: #F9F9FB;
+  display: flex;
+  background: #f9f9fb;
   border-radius: 1rem;
   padding: 1rem;
   max-width: 600px;
   margin: auto;
 }
 
+
+
+#splash-screen {
+  position: absolute;
+  top: 15rem;
+  left: 11rem;
+  display: flex;
+  flex-direction: column;
+  width: 25rem;
+}
+#start-button {
+  height: 4rem;
+  width: 5rem;
+  margin: auto;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight:500;
+  color: #7848fc;
+  border-radius: 1rem;
+  /* border: none; */
+  outline: none;
+}
+
 #beat-maker {
-display: flex;
-flex-direction: column;
-/* width: 50rem; */
-justify-content: space-between;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .note-row {
   display: flex;
   margin: auto;
-  
 }
 .toggle-off {
-  background: #7848FC;
-  display: block;
-  width: 2rem;
-  height: 2rem;
-  margin: 0.1rem;
-  border-radius: .5rem;
-}
-.toggle-on {
   background: #b59ef5;
   display: block;
   width: 2rem;
   height: 2rem;
   margin: 0.1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
+}
+.toggle-on {
+  background: #7848fc;
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
 }
 
 #buttons {
@@ -68,8 +96,8 @@ justify-content: space-between;
   outline: none;
   display: block;
   justify-items: center;
-  margin: .3rem;
-  border-radius: .5rem;
+  margin: 0.3rem;
+  border-radius: 0.5rem;
   width: 4rem;
   height: 4rem;
 }
@@ -77,17 +105,16 @@ justify-content: space-between;
   margin: auto;
   margin-left: 1.1rem;
   display: block;
-  width: 0; 
-  height: 0; 
-  border-top: .8rem solid transparent;
-  border-bottom: .8rem  solid transparent;
-  border-left: 1rem  solid #7848FC;
+  width: 0;
+  height: 0;
+  border-top: 0.8rem solid transparent;
+  border-bottom: 0.8rem solid transparent;
+  border-left: 1rem solid #7848fc;
 }
 #stop-icon {
   margin: auto;
   display: block;
-  width: 1rem; 
-  height: 1rem; 
+  width: 1rem;
+  height: 1rem;
   background: black;
-  
 }
