--- a/style.css
+++ b/style.css
@@ -38,9 +38,8 @@ h3 {
 
 
 #splash-screen {
-  position: absolute;
-  top: 15rem;
-  left: 11rem;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   width: 25rem;
@@ -61,8 +60,8 @@ h3 {
 }
 
 #beat-maker {
-  visibility: hidden;
-  display: flex;
+
+  display: none;
   flex-direction: column;
   justify-content: space-between;
 }
