--- a/style.css
+++ b/style.css
@@ -20,7 +20,17 @@ h3 {
   margin: auto;
   color: #3a3937;
   margin-bottom: .3rem;
-  font-size: 1.1rem;
+  margin-top: 1rem;
+  font-size: 1.3rem;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+h4 {
+  margin: auto;
+  color: #3a3937;
+  margin-bottom: .3rem;
+  font-size: 1rem;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -49,6 +59,7 @@ h3 {
   width: 5rem;
   margin: auto;
   margin-top: 1rem;
+  margin-bottom: 2.3rem;
   font-size: 1.1rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
