scaled back to a single oscillator by consolidating X Y array into a single array. multiple oscillators caused memory issues

--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@ body {
   margin: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 600px;
 }
 
 h2 {
+  display: block;
   margin: auto;
   margin-top: 2rem;
   margin-bottom: 1.5rem;
