Removed quote marks from object variables

--- a/style.css
+++ b/style.css
@@ -100,9 +100,15 @@ h4 {
   border-radius: 0.5rem;
 }
 
-#buttons {
+#control-panel {
   margin: auto;
   margin-top: 1rem;
+  display: flex;
+  width: 100%;
+}
+#buttons {
+  margin: auto;
+  grid-column-start: 3;
   display: flex;
 }
 #buttons button {
@@ -130,4 +136,20 @@ h4 {
   width: 1rem;
   height: 1rem;
   background: black;
+}
+#change-octave {
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+#change-octave button {
+  outline: none;
+  display: block;
+  justify-items: center;
+  margin: 0.3rem;
+  border-radius: 0.5rem;
+  width: 4rem;
+  height: 4rem;
+  font-weight: bolder;
+  /* font-size: 2rem; */
 }
